assets/CSS/style.css
@import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@500&family=Tangerine&display=swap');




* {
    color: black;
    padding: 0px;
    margin: 0px;
}

header {
    height: 170px;

}

.header-link {
    text-decoration: none;
}


.header-heading {
    display: flex;
    justify-content: center;
    align-items: center;
    line-height: normal;
    font-family: 'Dancing Script', cursive;
    font-size: 50px;

}

.navigation-bar {
    margin-top: 40px;
    display: flex;
    justify-content: center;
    align-items: center;
    gap: 10%;
    list-style-type: none;
}

.navigation-bar>li {
    text-decoration: none;
    font-size: 25px;

}

.navigation-bar>li>a {
    text-decoration: none;
}

.navigation-bar>li>a>i {
    font-size: 1.2rem;
}

.hero-section {
    background-image: url('../images/spa-image.jpg');
    background-repeat: no-repeat;
    background-size: cover;
    height: 1000px;
    width: 100%;

}



.navigation-bar {
    font-family: 'Raleway', Arial, sans-serif;
    text-align: center;
    text-transform: uppercase;
    font-weight: 500;
}

.navigation-bar * {
    box-sizing: border-box;
}

.navigation-bar li {
    display: inline-block;
    list-style: outside none none;
    margin: 0 1.5em;
    padding: 0;
}

.navigation-bar a {
    padding: 0.5em 0;
    color: rgb(0, 0, 0);
    position: relative;
    letter-spacing: 1px;
    text-decoration: none;
}

.navigation-bar a:before,
.navigation-bar a:after {
    position: absolute;
    -webkit-transition: all 0.35s ease;
    transition: all 0.35s ease;
}

.navigation-bar a:before {
    bottom: 0;
    display: block;
    height: 3px;
    width: 0%;
    content: "";
    background-color: #2980b9;
}

.navigation-bar a:after {
    left: 0;
    top: 0;
    padding: 0.5em 0;
    position: absolute;
    content: attr(data-hover);

    white-space: nowrap;
    max-width: 0%;
    overflow: hidden;
}

.navigation-bar a:hover:before,
.navigation-bar .current a:before {
    opacity: 1;
    width: 100%;
}

.navigation-bar a:hover:after,
.navigation-bar .current a:after {
    max-width: 100%;
}

.text-image-header {
    font-size: 200%;
    font-family: 'Handlee', cursive;
    font-size: 30px;
    letter-spacing: 3px;

    width: 250px;
    height: 200px;

    padding-top: 20px;
    padding-left: 20px;
    background-color: rgba(100, 179, 201, 0.7);


    bottom: 7%;
    right: 7%;
    position: absolute;

}

#announcements {
    height: 500px;
    margin-bottom: 100px;
    background-color: #e5e5e5
}

#big-header {
    text-align: center;
    margin: 20px 0;
    font-size: 280%;
    text-decoration: underline;
}

.left-announcement-heading {
    width: 60%;
    float: right;
    line-height: 20px;
    clear: both;
    margin-bottom: 50px; 

}

#left-announcement {
    padding-top: 30px;
    width: 45%;
    float: left;

}

.right-announcement-heading {
    width: 60%;
    float: left;
    line-height: 20px;
    clear: both;
    margin-bottom: 50px;
}
#right-announcement {
    padding-top: 30px;
    width: 45%;
    float: right;
}

.announcement-image {
margin-top: 30px; 
width:100%;
height: 300px;

}

.footer{
    background:#dad4d4;
    padding:18px 0px;
    font-family: 'Play', sans-serif;
    text-align:center;
    }
    
    .footer .row{
    width:100%;
    margin:1% 0%;
    padding:0.6% 0%;
    color:gray;
    font-size:0.8em;
    }
    
    .footer .row a{
        text-decoration:none;
        color:gray;
        transition:0.5s;
        }
    
    .footer .row a:hover{
    color:#1a95b4;
    }
    
    .footer .row ul{
    width: 100%;
    }
    
    .footer .row ul li{
    display:inline-block;
    margin:1px 10px;
    }
    
    .footer .row a i{
    font-size:2em;
    margin:0% 1%;
    }
    
    @import url(https://fonts.googleapis.com/css?family=Montserrat:400,700);

    body { background:rgb(30,30,40); }
    form { max-width:420px; margin:50px auto; }
    
    .feedback-input {
      color:white;
      font-family: Helvetica, Arial, sans-serif;
      font-weight:500;
      font-size: 18px;
      border-radius: 5px;
      line-height: 22px;
      background-color: transparent;
      border:2px solid #CC6666;
      transition: all 0.3s;
      padding: 13px;
      margin-bottom: 15px;
      width:100%;
      box-sizing: border-box;
      outline:0;
    }

   

